--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
 		<title>Barbearia Alura</title>
 
 		<link rel="stylesheet" href="reset.css">
@@ -26,7 +27,7 @@
 
 		<img class="banner" src="banner.jpg">
 
-		<main>
+		
 			<section class="principal">
 				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
 
@@ -40,31 +41,33 @@
 			</section>
 
 			<section class="mapa">
-                <h3 class="titulo-principal">Nosso estabelecimento</h3>
-                <p>Nosso estabelecimento está localizado no coração da cidade.</p>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14627.031466764247!2d-46.65233228144001!3d-23.577138244091046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1684364296693!5m2!1spt-BR!2sbr" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
+				<h3 class="titulo-principal">Nosso estabelecimento</h3>
+				<p>Nosso estabelecimento está localizado no coração da cidade.</p>
 
-			
+				<div class="mapa-conteudo">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.4483278365396!2d-46.63466568562861!3d-23.588249068469487!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum!5e0!3m2!1spt-BR!2sbr!4v1568814489656!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+				</div>
+			</section>
+
 			<section class="beneficios">
 				<h3 class="titulo-principal">Benefícios</h3>
 
-                <div class="conteudo-beneficios">
-                    <ul class="lista-beneficios">
-                        <li class="itens">Atendimento aos Clientes</li>
-                        <li class="itens">Espaço diferenciado</li>
-                        <li class="itens">Localização</li>
-                        <li class="itens">Profissionais Qualificados</li>
+				<div class="conteudo-beneficios">
+					<ul class="lista-beneficios">
+						<li class="itens">Atendimento aos Clientes</li>
+						<li class="itens">Espaço diferenciado</li>
+						<li class="itens">Localização</li>
+						<li class="itens">Profissionais Qualificados</li>
 						<li class="itens">Pontualidade</li>
 						<li class="itens">Limpeza</li>
-                    </ul><img src="beneficios.jpg" class="imagembeneficios">
-                </div>
+					</ul><img src="beneficios.jpg" class="imagem-beneficios">
+				</div>
 
 				<div class="video">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
-				</section>
-		</main>
+			</section>
+		
 
 		<footer>
 			<img src="logo-branco.png">
